# windows-com-tutorial

./: README.md
customclient/: CMakeLists.txt
customclient/src/: main.cpp
customserver/: CMakeLists.txt
customserver/src/: generate.idl  myserver.cpp  myserver.def  myserver.h  resource.rc
customserver/tools/: reg.bat  ureg.bat
myclient/: CMakeLists.txt
myclient/src/: main.cpp
myserver/: CMakeLists.txt
myserver/src/: myserver.cpp  myserver.def  myserver.h
myserver/tools/: reg.bat  ureg.bat
